<resources>
    <string name="app_name">ContactApplication</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_contact_detail">Contact detail</string>
    <string name="title_favorites">Favorites</string>
    <string name="title_recents">Recents</string>
    <string name="title_contacts">Contacts</string>
    <string name="avatar">avatar</string>
    <string name="user_name">Phan Minh Phú</string>
    <string name="contact_phone">+84905693609</string>
    <string name="choose_contact">Choose a contact</string>
    <string name="save">Save</string>
    <string name="call_your_favorite_contact">Call your favorite contacts with just one tap</string>
    <string name="add_a_favorite">Add a favorite</string>
    <string name="add_favorite_contact_successfully">Add contact to favorite successfully</string>
    <string name="add">Add</string>
    <string name="name">Name</string>
    <string name="word_a">A</string>
    <string name="time_call">Th 2</string>
    <string name="search_user_contact">Searching user contact</string>
    <string name="user_tagname">\@NewDelhi, India</string>
    <string name="chat">chat</string>
    <string name="time">1h ago</string>
    <string name="replace">replace</string>
    <string name="like">like</string>
    <string name="share">share</string>
    <string name="titleDetail">Post Detail</string>
    <string name="comment1">Google Developer Expert for Flutter.Passionate #Flutter, #Android Developer, #Entreprenuer #Youtuber</string>
    <string name="comment2">Lorem Ispum is simply dummy text of the printing and typesetting industry.</string>
    <string name="fabAdd">Add button</string>
    <string name="item_comment">item_comment</string>
    <string name="item_caches">item_caches</string>
    <string name="item_like">item_like</string>
    <string name="item_share">item_share</string>
    <string name="fab_content_desc">desc</string>
    <string name="img_user">img_user</string>
    <string name="call">Call</string>
    <string name="send_message">Send message</string>
    <string name="message">Message</string>
    <string name="video">Video</string>
    <string name="history">History</string>
    <string name="contact_info">Contact Info</string>
    <string name="add_user_contact">Add new user contact</string>
    <string name="ok">OK</string>
    <string name="notification">Notification</string>
    <string name="pls_fill_in_contact_name_or_password">Please fill in Contact"'"s name or password</string>
    <string name="add_contact_successfully">Add contact succesfully</string>

</resources>