<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_8sdp"
    android:background="@drawable/shape_aliceblue_border_10sdp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutUserContact"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideLineVertical0.10"
            style="@style/guideLineVertical"
            app:layout_constraintGuide_percent="0.10" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideLineHorizontal0.50"
            style="@style/guideLineHorizontal"
            app:layout_constraintGuide_percent="0.5" />

        <ImageView
            android:id="@+id/ivAvatar"
            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_40sdp"
            android:contentDescription="@string/avatar"
            android:src="@drawable/ic_user_avatar"
            app:layout_constraintBottom_toBottomOf="@id/guideLineHorizontal0.50"
            app:layout_constraintEnd_toEndOf="@id/guideLineVertical0.10"
            app:layout_constraintStart_toStartOf="@id/guideLineVertical0.10"
            app:layout_constraintTop_toTopOf="@id/guideLineHorizontal0.50" />


        <TextView
            android:id="@+id/tvUserName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_15sdp"
            android:text="@string/user_name"
            android:textColor="@color/black"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintBottom_toTopOf="@id/guideLineHorizontal0.50"
            app:layout_constraintStart_toEndOf="@id/ivAvatar" />

        <TextView
            android:id="@+id/tvTimeCall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_15sdp"
            android:text="@string/time_call"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintStart_toEndOf="@id/ivAvatar"
            app:layout_constraintTop_toBottomOf="@id/guideLineHorizontal0.50" />

        <ImageView
            android:id="@+id/btnCallPhone"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:layout_marginEnd="@dimen/_8sdp"
            android:src="@drawable/ic_phone_call"
            app:layout_constraintBottom_toBottomOf="@id/guideLineHorizontal0.50"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/guideLineHorizontal0.50" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/lineHorizontal50"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutUserContact"
        tools:visibility="visible" />


    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/layoutContactStuff"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:paddingVertical="@dimen/_6sdp"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lineHorizontal50"
        tools:visibility="visible">

        <LinearLayout
            android:id="@+id/btnCallVideo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:src="@drawable/ic_video"
                app:layout_constraintBottom_toBottomOf="@id/guideLineHorizontal0.5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/_10sdp"
                android:paddingEnd="@dimen/_10sdp"
                android:text="@string/video"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_12ssp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/btnSendMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:src="@drawable/ic_meassage"
                app:layout_constraintBottom_toBottomOf="@id/guideLineHorizontal0.5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/_10sdp"
                android:paddingEnd="@dimen/_10sdp"
                android:text="@string/message"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_12ssp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/btnHistoryContact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:src="@drawable/ic_history"
                app:layout_constraintBottom_toBottomOf="@id/guideLineHorizontal0.5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/_10sdp"
                android:paddingEnd="@dimen/_10sdp"
                android:text="@string/history"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_12ssp"
                android:textStyle="bold" />

        </LinearLayout>


    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.constraintlayout.widget.ConstraintLayout>